<?xml version="1.0"?>
<package>
  <name>canbus_interface_2</name>
  <version>0.0.0</version>
  <description>capture CAN messages in ROS</description>
  <maintainer email="geoffrey.viola@asirobots.com">GeoffViola</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
